--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <ul>
         <li>このサイトはHK_hokkeが管理しているコミュニケーションサイトです。</li>
         <li>システムの日本語化が完了していないため、使用には十分お気を付けください。</li>
-        
+        <li>書き込みには"BAWKBOX"へのログイン・会員登録が必要です。</li>     
       </ul>
+      <a href="https://bawkbox.com">こちらから</a>
       <a href="https://drive.google.com/file/d/1SEHc3NTuJRGfMRQn5oQA8WGF3Gs3vzHU/view?usp=sharing">コメント編集画面の見方</a>
     </div>
 
