--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class ="header">
-      <h1 class="header-logo">HK_hokkeの掲示版！</h1>
+      <h1 class="header-logo">YEAH!</h1>
       
       <a href="https://drive.google.com/file/d/1SEHc3NTuJRGfMRQn5oQA8WGF3Gs3vzHU/view?usp=sharing">コメント編集画面の見方</a>
     </div>
@@ -26,6 +26,7 @@
 
 
     <div class="footer">
+      <p>コメント欄</p>
      <h3></h3>
      <script data-sil-id="621dfe27647841001e5238c6">var loadWidget = function()
        { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS;
