--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>YEAH!</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round" rel="stylesheet">
-    <link rel="stylesheet" href="iine_app/iine.css">  
+    <script type="text/javascript" src="/mod/LKBNX/v2.23/demo/cn/cn.php"></script>
   </head>
   <body>
     <div class ="header">
@@ -39,29 +39,7 @@
       <a href="//bawkbox.com/install/blog"></a>
      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="iine_app/iine.js"></script>
-    <!-- いいねボタンここから -->
-<div id="iine_wrap">
-  <!-- ボタン本体ここから -->
-  <button type="submit" id="iine">
-  <div class="iine_wrap">
-  <i class="material-icons heart">favorite</i>
-  <div class="circle"></div>
-  <span id="countnum"></span>
-  </div>
-  </button>
-  <!-- ボタン本体ここまで -->
-  
-  <!-- お礼メッセージここから -->
-  <div id="iine_thanks" style="display:none;">
-  <div class="box">
-  <img src="iine_app/example.jpg" alt="THANK YOU!">
-  <p>ありがとうございます！</p>
-  </div>
-  </div>
-  <!-- お礼メッセージここまで -->
-  </div>
-  <!-- いいねボタンここまで -->
+    <div class="ajax-iine" data-pid="3wubyxx6um3l23qig6fv" data-tid="tpl-sb-blue-l"></div>
+      
   </body>
 </html>
