--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 
     <div class="main">
+      <div class="tetris">
+        <h2>テトリス(3/16)</h2>
+        <a class="url1" href="https://hokkeee.github.io/tetris/">ウェブ上のテトリス！</a>
+        <a class="url2" href="https://drive.google.com/file/d/16yVQTa1bLN7M4h1kfBfse_PmnDdI5thT/view?usp=sharing">プレビュー</a>
+      </div>
+
       <div class="sw">
         <h2>ストップウォッチ(3/15)</h2>
         <a class="url" href="https://hokkeee.github.io/stop-watch/">ウェブ用のストップウォッチ！</a>
