--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="sw">
         <h2>ストップウォッチ(3/15)</h2>
-        <a class="url" href="https://hokkeee.github.io/stop-watch/">ウェブ用のストップウォッチ！</a>
+        <a class="url1" href="https://hokkeee.github.io/stop-watch/">ウェブ用のストップウォッチ！</a>
         <a class="url2" href="https://drive.google.com/file/d/1EGn7Af9zMUi2Ne0F_3phAato7LZgZuT2/view?usp=sharing">プレビュー</a>
       </div>
 
