--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       
       pw = prompt("パスワードを入れて下さい。","");
       
-      if (pw == "abcde"){
-        location.href = "kakure.html";
+      if (pw == "oh,yeah"){
+        location.href = "https://hokkeee.github.io/hk_hokke-s-web/";
       }else{
         alert("パスワードが違います！");
       }
